[package]
name = "webdav-git-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
notify = "4.0.16"
git2 = "0.14"
webdav-handler = { version = "0.2.0", features = ["default", "actix-compat"] }
actix-web-httpauth = "0.6.0"
regex = "1"
thiserror = "1.0"
env_logger = "0.9.0"
log = "0.4.17"

[patch.crates-io]
actix-web-httpauth = { git = "https://github.com/anosatsuk124/actix-extras-patched-http-auth-digest.git", branch = "patched-digest" }
webdav-handler = { git = "https://github.com/anosatsuk124/webdav-handler-rs.git", branch = "patched" }
